--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -15,7 +15,7 @@ openapi3 {
 	description = "Harp Sharp 회원가입, 회원 정보 수정, JWT 인증/인가와 관련된 API입니다."
 	version = "1.0.0"
 	format = 'json'
-
+	outputFileNamePrefix = 'authAPI'
 	outputDirectory = 'build/openapi3'
 }
 
