--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 	testImplementation "org.springframework.security:spring-security-test"
-	swaggerUI 'org.webjars:swagger-ui:4.11.1'
+	testImplementation "com.epages:restdocs-api-spec-mockmvc:${restdocsApiSpecVersion}"
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 bootJar {
