--- a/board/build.gradle
+++ b/board/build.gradle
@@ -24,7 +24,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
-	swaggerUI 'org.webjars:swagger-ui:4.11.1'
+	testImplementation "com.epages:restdocs-api-spec-mockmvc:${restdocsApiSpecVersion}"
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 }
 
 bootJar {
