test: 멀티모듈 빌드 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -58,13 +58,13 @@ jobs:
           chmod +x auth/gradlew
           chmod +x board/gradlew
   
-          cp auth
+          cd auth
           ./gradlew --warning-mode all
           ./gradlew openapi3 --warning-mode all
-          cp ../board
+          cd ../board
           ./gradlew --warning-mode all
           ./gradlew openapi3 --warning-mode all
-          cp ../
+          cd ../
 
         shell: bash
         env:
