test: 멀티모듈 빌드 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -52,19 +52,15 @@ jobs:
 
       - name: Gradle 빌드 && API 명세서 업로드
         run: |
-          mkdir -p build/openapi3 | touch build/openapi3/openapi3.json
           mkdir -p auth/build/openapi3/
           mkdir -p board/build/openapi3/
           chmod +x auth/gradlew
           chmod +x board/gradlew
   
-          cd auth
-          ./gradlew --warning-mode all
-          ./gradlew openapi3 --warning-mode all
-          cd ../board
-          ./gradlew --warning-mode all
-          ./gradlew openapi3 --warning-mode all
-          cd ../
+          auth/gradlew --warning-mode all
+          auth/gradlew openapi3 --warning-mode all
+          build/gradlew --warning-mode all
+          build/gradlew openapi3 --warning-mode all
 
         shell: bash
         env:
