--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           mkdir -p build/api-spec
           chmod +x ./gradlew
-          ./gradlew --warning-mode all
+          ./gradlew clean build --warning-mode all
           ./gradlew openapi3 --warning-mode all
 
       - name: 빌드 및 API 명세서 생성 (Board)
@@ -63,7 +63,7 @@ jobs:
         run: |
           mkdir -p build/api-spec
           chmod +x ./gradlew
-          ./gradlew --warning-mode all
+          ./gradlew clean build --warning-mode all
           ./gradlew openapi3 --warning-mode all
       
 
@@ -103,7 +103,6 @@ jobs:
         if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature/auth'}}
         run: |
           FILE_PATH=$(find . -name authAPI.json)
-          cat $(find . -name auth-0.0.1-SNAPSHOT.jar)
           mkdir -p before-deploy-auth
           cp auth/build/libs/auth-*.jar before-deploy-auth/
           cp auth/scripts/*.sh before-deploy-auth/
