test: 멀티모듈 빌드 테스트

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -119,7 +119,7 @@ jobs:
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
           --deployment-group-name ${{ secrets.AWS_CODEDEPLOY_GROUP_NAME }} \
           --query "deployments[0]" --output text)
-          aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID
+          aws deploy wait deployment-successful --deployment-id $DEPLOYMENT_ID || true
           
           aws deploy create-deployment \
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
