--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -82,14 +82,15 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: S3 업로드(DB)
+        working-directory: ./db
         if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature/auth'}}
         run: |
           mkdir -p before-deploy-db
           cp ./docker-compose.yml before-deploy-db/
           cp infra_rds/scripts/*.sh before-deploy-db/
           cd before-deploy-db && zip -r before-deploy-db *
-          cd ../ && mkdir -p deploy/db
-          mv before-deploy-db/before-deploy-db.zip deploy/db/deploy-db.zip
+          cd ../ && mkdir -p deploy-db
+          mv before-deploy-db/before-deploy-db.zip deploy-db/deploy-db.zip
           aws s3 cp deploy/db/deploy-db.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-db.zip
 
           aws deploy create-deployment \
@@ -100,20 +101,21 @@ jobs:
           --s3-location bucket=${{ secrets.AWS_BUCKET_NAME }},bundleType=zip,key=deploy-db.zip
 
       - name: S3 업로드(Auth)
+        working-directory: ./auth
         if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature/auth'}}
         run: |
           FILE_PATH=$(find . -name authAPI.json)
           mkdir -p before-deploy-auth
-          cp auth/build/libs/auth-*.jar before-deploy-auth/
-          cp auth/scripts/*.sh before-deploy-auth/
-          cp auth/appspec.yml before-deploy-auth/
-          cp auth/Dockerfile before-deploy-auth/
-          cp auth/docker-compose.yml before-deploy-auth/
+          cp build/libs/auth-*.jar before-deploy-auth/
+          cp scripts/*.sh before-deploy-auth/
+          cp appspec.yml before-deploy-auth/
+          cp Dockerfile before-deploy-auth/
+          cp docker-compose.yml before-deploy-auth/
           cp $FILE_PATH before-deploy-auth/
           cd before-deploy-auth && zip -r before-deploy-auth *
-          cd ../ && mkdir -p deploy/auth
-          mv before-deploy-auth/before-deploy-auth.zip deploy/auth/deploy-auth.zip
-          aws s3 cp deploy/auth/deploy-auth.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-auth.zip
+          cd ../ && mkdir -p deploy-auth
+          mv before-deploy-auth/before-deploy-auth.zip deploy-auth/deploy-auth.zip
+          aws s3 cp deploy-auth/deploy-auth.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-auth.zip
           
           DEPLOYMENT_ID=$(aws deploy list-deployments \
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
@@ -129,20 +131,21 @@ jobs:
           --s3-location bucket=${{ secrets.AWS_BUCKET_NAME }},bundleType=zip,key=deploy-auth.zip
 
       - name: S3 업로드(Board)
+        working-directory: ./board
         if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/feature/auth'}}
         run: |
           FILE_PATH=$(find . -name boardAPI.json)
           mkdir -p before-deploy-board
-          cp board/build/libs/board-*.jar before-deploy-board/
-          cp board/scripts/*.sh before-deploy-board/
-          cp board/appspec.yml before-deploy-board/
-          cp board/Dockerfile before-deploy-board/
-          cp board/docker-compose.yml before-deploy-board/
+          cp build/libs/board-*.jar before-deploy-board/
+          cp scripts/*.sh before-deploy-board/
+          cp appspec.yml before-deploy-board/
+          cp Dockerfile before-deploy-board/
+          cp docker-compose.yml before-deploy-board/
           cp $FILE_PATH before-deploy-board/
           cd before-deploy-board && zip -r before-deploy-board *
-          cd ../ && mkdir -p deploy/board
-          mv before-deploy-board/before-deploy-board.zip deploy/board/deploy-board.zip
-          aws s3 cp deploy/board/deploy-board.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-board.zip
+          cd ../ && mkdir -p deploy-board
+          mv before-deploy-board/before-deploy-board.zip deploy-board/deploy-board.zip
+          aws s3 cp deploy-board/deploy-board.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-board.zip
           
           DEPLOYMENT_ID=$(aws deploy list-deployments \
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
@@ -163,9 +166,9 @@ jobs:
           mkdir -p before-deploy-nginx
           cp -r ./nginx before-deploy-nginx/
           cd before-deploy-nginx && zip -r before-deploy-nginx *
-          cd ../ && mkdir -p deploy/nginx
-          mv before-deploy-nginx/before-deploy-nginx.zip deploy/nginx/deploy-nginx.zip
-          aws s3 cp deploy/nginx/deploy-nginx.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-nginx.zip
+          cd ../ && mkdir -p deploy-nginx
+          mv before-deploy-nginx/before-deploy-nginx.zip deploy-nginx/deploy-nginx.zip
+          aws s3 cp deploy-nginx/deploy-nginx.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-nginx.zip
 
           DEPLOYMENT_ID=$(aws deploy list-deployments \
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
