--- a/infra_rds/appspec.yml
+++ b/infra_rds/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/deploy/db/
+    destination: /home/ubuntu/deploy-db/
     overwrite: yes
 
 permissions:
