fix: CI 배포 파일 저장 경로 수정

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -87,7 +87,7 @@ jobs:
         run: |
           mkdir -p before-deploy-db
           cp ./docker-compose.yml before-deploy-db/
-          cp infra_rds/scripts/*.sh before-deploy-db/
+          cp scripts/*.sh before-deploy-db/
           cd before-deploy-db && zip -r before-deploy-db *
           cd ../ && mkdir -p deploy-db
           mv before-deploy-db/before-deploy-db.zip deploy-db/deploy-db.zip
