fix: CI 배포 파일 저장 경로 수정

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -91,7 +91,7 @@ jobs:
           cd before-deploy-db && zip -r before-deploy-db *
           cd ../ && mkdir -p deploy-db
           mv before-deploy-db/before-deploy-db.zip deploy-db/deploy-db.zip
-          aws s3 cp deploy/db/deploy-db.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-db.zip
+          aws s3 cp deploy-db/deploy-db.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy-db.zip
 
           aws deploy create-deployment \
           --application-name ${{ secrets.AWS_CODEDEPLOY_APP_NAME }} \
