--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -43,7 +43,13 @@ server {
        }
 
        location /swagger/auth {
-           proxy_pass http://swagger:8000;
+           proxy_pass http://swagger/auth:8080;
            include /etc/nginx/conf.d/header.conf;
        }
+
+       location /swagger/board {
+            proxy_pass http://swagger/board:8080;
+            include /etc/nginx/conf.d/header.conf;
+       }
+
 }
