fix: docker-compose 수정

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -43,12 +43,12 @@ server {
        }
 
        location /swagger/auth {
-           proxy_pass http://swagger/auth:8080;
+           proxy_pass http://api-auth:8080;
            include /etc/nginx/conf.d/header.conf;
        }
 
        location /swagger/board {
-            proxy_pass http://swagger/board:8080;
+            proxy_pass http://api-board:8080;
             include /etc/nginx/conf.d/header.conf;
        }
 
