--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -17,13 +17,13 @@ services:
 
   swagger:
     image: swaggerapi/swagger-ui
-    container_name: swagger/auth
+    container_name: swagger-auth
     volumes:
       - ./:/mnt
     expose:
       - "8080"
     environment:
-      - SWAGGER_JSON=mnt/openapi3.json
+      - SWAGGER_JSON=mnt/authAPI.json
     networks:
       - harpsharp
 
