--- a/board/docker-compose.yml
+++ b/board/docker-compose.yml
@@ -17,13 +17,13 @@ services:
 
   swagger:
     image: swaggerapi/swagger-ui
-    container_name: swagger/board
+    container_name: swagger-board
     volumes:
       - ./:/mnt
     expose:
       - "8080"
     environment:
-      - SWAGGER_JSON=mnt/openapi3.json
+      - SWAGGER_JSON=mnt/boardAPI.json
     networks:
       - harpsharp
 
