--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   nginx:
     container_name: nginx
@@ -9,7 +11,6 @@ services:
     volumes:
       - ./conf.d:/etc/nginx/conf.d
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./content:/var/www
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     networks:
