test: 배포 파이프라인 통합

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -90,6 +90,7 @@ jobs:
           cp appspec.yml deploy-db/
           cd ../ && mkdir -p deploy/db
           mv ./infra_rds/deploy-db deploy/db 
+          ls deploy
 
       - name: 배포 Dir 생성(Auth)
         working-directory: ./auth
@@ -101,7 +102,7 @@ jobs:
           cp build/api-spec/authAPI.json deploy-auth/
           cd ../ && mkdir -p deploy/auth
           mv ./auth/deploy-auth deploy/auth 
-
+          ls deploy
 
       - name: 배포 Dir 생성(Board)
         working-directory: ./board
@@ -113,12 +114,14 @@ jobs:
           cp build/api-spec/boardAPI.json deploy-board/
           cd ../ && mkdir -p deploy/board
           mv ./board/deploy-board deploy/board 
+          ls deploy
 
       - name: S3 업로드 및 CD 요청
         working-directory: ./
         run: |
           cp scripts/*.sh deploy
           cp appspec.yml deploy
+          ls deploy
           cd deploy && zip -r deploy *
           aws s3 cp deploy.zip s3://${{ secrets.AWS_BUCKET_NAME }}/deploy.zip
 
