--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -1,13 +1,15 @@
 server {
-    listen 80;
-    server_name harpsharp.com www.harpsharp.com;
+    listen       80;
+    listen  [::]:80;
+    server_name harpsharp.com;
     include /etc/nginx/conf.d/header.conf;
     return 308 https://harpsharp.com$request_uri;
 }
 
 server {
-       listen 443 ssl;
-       server_name harpsharp.com www.harpsharp.com;
+       listen  443 ssl;
+       listen [::]:443;
+       server_name harpsharp.com;
        # Certificate
        ssl_certificate /etc/letsencrypt/live/harpsharp.com/fullchain.pem;
        # Private Key
