--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -7,23 +7,14 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./conf.d:/etc/nginx/conf.d
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - conf.d:/etc/nginx/conf.d
+      - nginx.conf:/etc/nginx/nginx.conf
+      - data/certbot/conf:/etc/letsencrypt
+      - data/certbot/www:/var/www/certbot
     networks:
       - harpsharp
     environment:
       - TZ=Asia/Seoul
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-
-  certbot:
-    image: certbot/certbot
-    restart: unless-stopped
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
   harpsharp:
