fix: swagger 접근 권한 확장 + 스크립트 리팩토링

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -17,39 +17,38 @@ server {
        include /etc/letsencrypt/options-ssl-nginx.conf;
        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-       location / {
-               root   /usr/share/nginx/html;
-               proxy_pass http://auth:8080; # 자신의 springboot app이사용하는 포트
-               include /etc/nginx/conf.d/header.conf;
+       location = / {
+            proxy_pass http://board:8080;
+            include /etc/nginx/conf.d/header.conf;
        }
 
        # API 엔드포인트 설정
-       location /login {
+       location = /login {
                proxy_pass http://auth:8080;
                include /etc/nginx/conf.d/header.conf;
        }
 
-       location /logout {
+       location = /logout {
                proxy_pass http://auth:8080;
                include /etc/nginx/conf.d/header.conf;
        }
 
-       location /reissue {
+       location = /reissue {
                proxy_pass http://auth:8080;
                include /etc/nginx/conf.d/header.conf;
        }
 
-       location /user {
-               proxy_pass http://auth:8080;
+       location = ~* ^/(.*)/user/(.*)$ {
+               proxy_pass http://auth:8080/$1/$2;
                include /etc/nginx/conf.d/header.conf;
        }
 
-       location /swagger/auth {
+       location = /swagger/auth {
            proxy_pass http://swagger-auth:8080;
            include /etc/nginx/conf.d/header.conf;
        }
 
-       location /swagger/board {
+       location = /swagger/board {
             proxy_pass http://swagger-board:8080;
             include /etc/nginx/conf.d/header.conf;
        }
