--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -7,10 +7,10 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - conf.d:/etc/nginx/conf.d
-      - nginx.conf:/etc/nginx/nginx.conf
-      - data/certbot/conf:/etc/letsencrypt
-      - data/certbot/www:/var/www/certbot
+      - ./conf.d:/etc/nginx/conf.d
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     networks:
       - harpsharp
     environment:
