--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -18,11 +18,11 @@ services:
     image: swaggerapi/swagger-ui
     container_name: swagger-auth
     volumes:
-      - ./:/mnt
+      - ./:/tmp
     expose:
       - "8080"
     environment:
-      - SWAGGER_JSON=mnt/authAPI.json
+      - SWAGGER_JSON=tmp/authAPI.json
     networks:
       - harpsharp
 
