test: 리다이렉팅 테스트

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -18,7 +18,7 @@ server {
        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
        location = / {
-            proxy_pass http://swagger-auth:8080;
+            proxy_pass http://auth:8080;
             include /etc/nginx/conf.d/header.conf;
        }
 
