add: 배포 파이프라인에 Todo 모듈 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -43,4 +43,13 @@ server {
                include /etc/nginx/conf.d/header.conf;
        }
 
+       location /todo {
+                proxy_pass http://todo:8080;
+                include /etc/nginx/conf.d/header.conf;
+       }
+
+       location /board {
+                proxy_pass http://board:8080;
+                include /etc/nginx/conf.d/header.conf;
+       }
 }
