--- a/todo/build.gradle
+++ b/todo/build.gradle
@@ -2,25 +2,38 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id 'com.epages.restdocs-api-spec' version "${restdocsApiSpecVersion}"
+	id 'org.hidetake.swagger.generator' version '2.18.2'
 }
 
-group = 'com.harpsharp'
-version = '0.0.1-SNAPSHOT'
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
-
-repositories {
-	mavenCentral()
+openapi3 {
+	servers = [
+			{ url = "http://swagger-todo" },
+			{ url = "http://harpsharp.com/swagger/todo" }
+	]
+	title = "Harp Sharp Todo API"
+	description = "Harp Sharp Todo List와 관련된 API입니다."
+	version = "1.0.0"
+	format = 'json'
+	outputFileNamePrefix = 'todoAPI'
 }
 
 dependencies {
-	implementation project(":infra_rds")
+	implementation 	   project(':infra_rds')
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+bootJar {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	enabled = true;
 }
+
+
+
+
+
+
+
+
+
+
+
