--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,9 +2,14 @@ name: CI/CD
 on:
   push:
     branches:
-      - feature/auth
+      - feature/*
       - dev
       - main
+  pull_request:
+    branches:
+      - main
+      - dev
+      - feature/*
   workflow_dispatch:
 
 jobs:
@@ -97,8 +102,6 @@ jobs:
         run: |
           mkdir -p deploy-db
           cp docker-compose.yml deploy-db/
-          cp scripts/*.sh deploy-db/
-          cp appspec.yml deploy-db/
           cd ../ && mkdir -p deploy/db
           mv ./infra_rds/deploy-db/* deploy/db 
 
