test: nginx 리다이렉션 테스트

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -24,32 +24,43 @@ server {
 
        # API 엔드포인트 설정
        location = /login {
-               proxy_pass http://auth:8080;
-               include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://auth:8080/login;
+            include /etc/nginx/conf.d/header.conf;
        }
 
        location = /logout {
-               proxy_pass http://auth:8080;
-               include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://auth:8080/logout;
+            include /etc/nginx/conf.d/header.conf;
        }
 
        location = /reissue {
-               proxy_pass http://auth:8080;
-               include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://auth:8080/reissue;
+            include /etc/nginx/conf.d/header.conf;
        }
 
-       location ~* ^/(.*)/user/(.*)$ {
-               proxy_pass http://auth:8080/$1/$2;
-               include /etc/nginx/conf.d/header.conf;
+       location = /verify {
+            internal;
+            include /etc/nginx/conf.d/header.conf;
+            proxy_pass_request_body off;  # 본문을 보내지 않음
+            proxy_set_header Content-Length "";
+        }
+
+       location ~* /todo/(.*)$ {
+            set $auth_request '';
+            if($request_method != 'GET') {
+                set $auth_request '/verify';
+            }
+
+            auth_request $auth_request;
+
+            proxy_pass http://todo:8080/$1;
+            include /etc/nginx/conf.d/header.conf;
        }
 
-       location /todo {
-                proxy_pass http://todo:8080;
+       location ~* /board/(.*)$ {
+                proxy_pass http://board:8080/$1;
                 include /etc/nginx/conf.d/header.conf;
        }
 
-       location /board {
-                proxy_pass http://board:8080;
-                include /etc/nginx/conf.d/header.conf;
-       }
+
 }
