--- a/nginx/conf.d/header.conf
+++ b/nginx/conf.d/header.conf
@@ -4,3 +4,5 @@ proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header Authorization $http_authorization;
+proxy_set_header Cookie $http_cookie;
