fix: main, feature/test 브랜치 병ㅎ바

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -47,6 +47,7 @@ server {
 
        location ~* /todo/(.*)$ {
             set $auth_request '';
+
             if($request_method != 'GET') {
                 set $auth_request '/verify';
             }
@@ -58,8 +59,15 @@ server {
        }
 
        location ~* /board/(.*)$ {
-                proxy_pass http://board:8080/$1;
-                include /etc/nginx/conf.d/header.conf;
+            set $auth_request '';
+
+            if($request_method != 'GET') {
+                set $auth_request '/verify';
+            }
+
+            auth_request $auth_request;
+            proxy_pass http://board:8080/$1;
+            include /etc/nginx/conf.d/header.conf;
        }
 
 
