--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -43,7 +43,7 @@ server {
             include /etc/nginx/conf.d/header.conf;
             proxy_pass_request_body off;  # 본문을 보내지 않음
             proxy_set_header Content-Length "";
-            proxy_pass http://auth:8080;
+            proxy_pass http://auth:8080/verify;
         }
 
        location ~* /todo/(.*)$ {
@@ -55,8 +55,8 @@ server {
 
             auth_request $auth_request;
 
-            proxy_pass http://todo:8080/$1;
             include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://todo:8080/$1;
        }
 
        location ~* /board/(.*)$ {
@@ -67,7 +67,7 @@ server {
             }
 
             auth_request $auth_request;
-            proxy_pass http://board:8080/$1;
             include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://todo:8080/$1;
        }
 }
