add: join 리다이렉션 추가

--- a/nginx/conf.d/redirect.conf
+++ b/nginx/conf.d/redirect.conf
@@ -33,6 +33,11 @@ server {
             proxy_pass http://auth:8080/logout;
        }
 
+       location = /join {
+            include /etc/nginx/conf.d/header.conf;
+            proxy_pass http://auth:8080/join;
+       }
+
        location = /reissue {
             include /etc/nginx/conf.d/header.conf;
             proxy_pass http://auth:8080/reissue;
